# JimsBarCashingApp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.raspberry  README.md  TODO
.github/workflows/: arm-runner.yml  build-and-package-for-rpi-5.yml  build-and-release.yml  cross-build-arm64.yml
docker/: Dockerfile  Dockerfile.arm64
src/: CMakeLists.txt  CocktailModel.cpp  CocktailModel.h  DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h  README.md  Version.h  cocktaildata.cpp  cocktaildata.h  cocktailmodel.cpp  cocktailmodel.h  cocktails.json  main.cpp  main.qml  package.json  qml.qrc  resources.qrc
src/assets/styles/: mainStyle.qml
src/components/: AddDiscountDialog.qml  ChangeSettingsDialog.qml  DatePickerPopup.qml  SelectCocktailDialog.qml  SetWeatherComponent.qml  TileButton.qml
src/controllers/: CMakeLists.txt  CashBalanceScreenController.cpp  CashBalanceScreenController.h  CheckoutScreenController.cpp  CheckoutScreenController.h  CocktailsConfigurationScreenController.cpp  CocktailsConfigurationScreenController.h  DiscountsConfigurationScreenController.cpp  DiscountsConfigurationScreenController.h  GeneralSettingsScreenController.cpp  GeneralSettingsScreenController.h  ImportExportScreenController.cpp  ImportExportScreenController.h  SetWeatherComponentController.cpp  SetWeatherComponentController.h  StatisticsScreenController.cpp  StatisticsScreenController.h  WeatherSettingsScreenController.cpp  WeatherSettingsScreenController.h
src/database/: create_database.sh  data.sql  schema.sql
src/entities/: CMakeLists.txt  Cocktail.cpp  Cocktail.h  Discount.cpp  Discount.h  DiscountType.cpp  DiscountType.h  GeneralSettings.cpp  GeneralSettings.h  Sale.cpp  Sale.h  StatisticsData.cpp  StatisticsData.h  StatisticsDataByTime.cpp  StatisticsDataByTime.h  TemperatureCategory.cpp  TemperatureCategory.h  WeatherCondition.cpp  WeatherCondition.h  WeatherData.cpp  WeatherData.h
src/models/: CMakeLists.txt  DatabaseModel.qml  DiscountModel.cpp  DiscountModel.h
src/repositories/: CMakeLists.txt  CashBalanceRepository.cpp  CashBalanceRepository.h  CocktailRepository.cpp  CocktailRepository.h  DiscountsRepository.cpp  DiscountsRepository.h  SalesRepository.cpp  SalesRepository.h  SettingsRepository.cpp  SettingsRepository.h  WeatherRepository.cpp  WeatherRepository.h
src/screens/: CashBalanceScreen.qml  CheckoutScreen.qml  CocktailsConfigurationScreen.qml  DiscountsConfigurationScreen.qml  GeneralSettingsScreen.qml  HomeScreen.qml  ImportExportScreen.qml  SettingsScreen.qml  StatisticsScreen.qml  WeatherSettingsScreen.qml
src/services/: CMakeLists.txt  LocationService.cpp  LocationService.h  WeatherService.cpp  WeatherService.h
tests/: CMakeLists.txt  test_Cocktail.cpp  test_DatabaseManager.cpp
